[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-generativeai>=0.8.5",
    "gunicorn>=23.0.0",
    "markdown>=3.8",
    "openai>=1.78.0",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.0.0",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.25.5",
    "weasyprint>=65.1",
    "werkzeug>=3.1.3",
]
